duniverse/menhirLib.20200211/test/static/bad/modifier.mly
%type<int> list(exp+ tail)

%%
