duniverse/menhirLib.20200211/test/static/bad/modifier.exp
File "modifier.mly", line 1, characters 21-25:
Error: syntax error after '+' and before 'tail'.
Ill-formed list of actual parameters.
Either a modifier '*' or '+' or '?'
or a closing parenthesis ')'
or a comma ',' is expected at this point.
Examples of well-formed actual parameters:
  expr
  expr+
  option(expr)
  separated_list(COMMA, expr)
